@@ -5,7 +5,7 @@ export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
 	par3d, par3dinterp, particles3d, persp3d, play3d, plot3d, points3d, pop3d,
 	qmesh3d, quads3d, rgl.bbox, rgl.bg, rgl.bringtotop, rgl.clear,
 	rgl.close, rgl.cur, rgl.ids, rgl.init, rgl.light, rgl.lines, rgl.linestrips,
-	rgl.material, rgl.open, rgl.points, rgl.pop, rgl.postscript,
+	rgl.material, rgl.open, rgl.pixels, rgl.points, rgl.pop, rgl.postscript,
 	rgl.primitive, rgl.projection, rgl.quads, rgl.quit,
 	rgl.select3d, rgl.set, rgl.snapshot, rgl.spheres, rgl.sprites,
 	rgl.surface, rgl.texts, rgl.triangles, rgl.user2window,
